# tokio-tracing-test

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  otel-config.yaml
src/: main.rs
