[package]
name = "tokio-tracing-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["json","env-filter"]}
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
opentelemetry = { version = "0.17", default-features = false, features = ["trace", "rt-tokio"] }
opentelemetry-otlp = "0.10"
tracing-opentelemetry = "0.17"
reqwest = "0.11.10"
tokio = { version = "1.18.0", features = ["full"] }
